samples/_failures_safe/1761624305_63a8ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f987b492.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_f987b492.c:160:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  160 |         uint32_t i
      |         ^~~~~~~~
./samples/SAFE/__tmp_f987b492.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f987b492.c:160:9: error: expected declaration or statement at end of input
